// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page layout creation should succeed should create a page layout with DASHBOARD type 1`] = `
{
  "createdAt": Any<String>,
  "dashboardFilters": null,
  "deletedAt": null,
  "id": Any<String>,
  "name": "Dashboard Layout",
  "objectMetadataId": null,
  "tabs": null,
  "type": "DASHBOARD",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout creation should succeed should create a page layout with DASHBOARD type and dashboard filters 1`] = `
{
  "createdAt": Any<String>,
  "dashboardFilters": [
    {
      "defaultValue": {
        "operand": "IS_NOT_EMPTY",
        "value": "",
      },
      "filterType": "DATE_TIME",
      "id": Any<String>,
      "label": "Created",
    },
    {
      "filterType": "RELATION",
      "id": Any<String>,
      "isRequired": false,
      "label": "Owner",
    },
  ],
  "deletedAt": null,
  "id": Any<String>,
  "name": "Dashboard Layout With Filters",
  "objectMetadataId": null,
  "tabs": null,
  "type": "DASHBOARD",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout creation should succeed should create a page layout with minimal input 1`] = `
{
  "createdAt": Any<String>,
  "dashboardFilters": null,
  "deletedAt": null,
  "id": Any<String>,
  "name": "Test Page Layout",
  "objectMetadataId": null,
  "tabs": null,
  "type": "RECORD_PAGE",
  "updatedAt": Any<String>,
}
`;
